2009-05-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* test/xmltest/xmltest.sh:
	Added support for inverse xmltests in .lines files.

2009-04-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProvider.c, classProviderGz.c, classProviderMem.c
	  test/xmltest/EnumerateClassesNoName.*:
	[ 2780126 ] EnumerateClassNames with ClassName=NULL gets error
	(based on patch from Shigeyoshi Hashi)

2009-04-23 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimXmlGen.c
	[ 2779859 ] HOST defaults to "localhost" in XML output of OBJECTPATH

2009-04-17  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* indCIMXMLHandler.c:
	[ 2771516 ] Duplicate extern in indCIMXMLHandler.c

	* objectImpl.c:
	[ 2771819 ] Some ClXXX functions in objectImpl assume "data" is not NULL
	
2009-04-17 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* providerMgr.c
	[ 2538227 ] Daemon clients are not unloading providers (localclient)

2009-04-14 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* Makefile.am, configure.ac, wbemcatX, man/wbemcatX.1.pre.in:
	Multi protocol version of wbemcat
	(code from Sean Swehla)

2009-04-14  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* pam/sfcb:
	[ 2762848 ] pam/sfcb reduced logging in syslog
	(patch by Chad Smith)

2009-04-06 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* classProvider.c, classProviderGz.c:
	[ 2727841 ] Memory Leak is in gatherNameSpaces in classProvider
	( based on patch from Shigeyoshi Hashi)

2009-04-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* queryParser.y
	[ 2141249 ] WQL parser needs to suppor the LIKE syntax
	(fix error/warning from previous patch

2009-03-31  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerDrv.c, cimcClientSfcbLocal.c
	Fixed [ 2708675 ] unused function definition in providerDrv.c
	(fix by Surendra Kodali)

2009-03-25  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, cimXmlOps.y:
	Fixed [ 2591758 ] EOF Exception when running DefineSystem