@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4180" PROTOCOLVERSION="1.0">
+<SIMPLEREQ>
+<IMETHODCALL NAME="CreateClass">
+<LOCALNAMESPACEPATH>
+<NAMESPACE NAME="root"/>
+<NAMESPACE NAME="interop"/>
+</LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="NewClass">
+<CLASS NAME="CIM_ObjectManagerTest" SUPERCLASS="CIM_ObjectManager">
+<PROPERTY NAME="TestProperty" TYPE="string">
+<VALUE>TestValue</VALUE>
+</PROPERTY>
+</CLASS>
+</IPARAMVALUE>
+</IMETHODCALL>
+</SIMPLEREQ>
+</MESSAGE>
+</CIM>
