@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="utf-8"?>
+<CIM CIMVERSION="2.0" DTDVERSION="2.0">
+<MESSAGE ID="4711" PROTOCOLVERSION="1.0">
+<SIMPLEREQ>
+<IMETHODCALL NAME="DeleteClass">
+<LOCALNAMESPACEPATH>
+<NAMESPACE NAME="root">
+</NAMESPACE>
+<NAMESPACE NAME="interop">
+</NAMESPACE>
+</LOCALNAMESPACEPATH>
+<IPARAMVALUE NAME="ClassName">
+<CLASSNAME NAME="CIM_ObjectManagerTest"/>
+</IPARAMVALUE>
+</IMETHODCALL>
+</SIMPLEREQ>
+</MESSAGE>
+</CIM>
