@@ -30,6 +30,7 @@ Bugs fixed:
 - 2771819 Some ClXXX functions in objectImpl assume "data" is not NULL
 - 2779859 HOST defaults to "localhost" in XML output of OBJECTPATH
 - 2780126 EnumerateClassNames with ClassName=NULL gets error
+- 2778276 ClassProvider exiting by CreateClass
 
 Changes in 1.3.3
 ================
